logo in header fix on iphone 6s

--- a/student/src/components/Header.css
+++ b/student/src/components/Header.css
@@ -33,7 +33,7 @@
 	transform: translateY(-50%);
 }
 
-@media screen and (max-width: 374px) {
+@media screen and (max-width: 400px) {
     .title {
         padding-top: 8px;
         margin-left: 0px;
